@@ -1,3 +1,10 @@
+2017-06-13 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/stm8.c:
+	  More efficient equality comparisons.
+	* support/regression/tests/bug-2621.c:
+	  Test for bug #2612.
+
 2017-06-12 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/stm8.c:
